log/build_2022-11-18_20-24-16/mypkg/stderr.log
  File "/home/takuya/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/listner.py", line 7
    node.get_logger().info("Listen: %d % msg.data)
                                                 ^
SyntaxError: EOL while scanning string literal

